--- a/hieradata/dev/wso2/wso2am/pattern-2/common.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-2/common.yaml
@@ -37,6 +37,11 @@ wso2::file_list:
   - "repository/resources/security/%{hiera('wso2::key_store')}"
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
 
+#wso2::cert_list:
+#  -
+#    file: server.crt
+#    alias: demo_cert
+
 wso2::service_name: wso2am
 wso2::hostname: am.dev.wso2.org
 wso2::mgt_hostname: am.dev.wso2.org
@@ -207,6 +212,8 @@ wso2::enable_jms_connection_details: false
 wso2::apim_gateway_disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
+wso2::key_store: wso2carbon.jks
+wso2::trust_store: client-truststore.jks
 
 # Secure vault configuration
 #wso2::enable_secure_vault: true
