--- a/hieradata/dev/wso2/wso2am/pattern-2/api-key-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-2/api-key-manager.yaml
@@ -27,7 +27,7 @@ wso2::apim_traffic_manager:
 
 wso2::clustering:
   enabled: true
-  domain: km.am.wso2.domain
+  domain: wso2.am.domain
   sub_domain: worker
   local_member_host: "%{::ipaddress}"
   local_member_port: 4000
