--- a/hieradata/dev/wso2/wso2am/pattern-2/gateway-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-2/gateway-manager.yaml
@@ -25,22 +25,21 @@ wso2::apim_traffic_manager:
   username: "%{hiera('wso2::super_admin::username')}"
   password: "%{hiera('wso2::super_admin::password')}"
 
+wso2::apim_analytics:
+  enabled: false
+
 wso2::clustering:
   enabled: true
-  domain: gw.am.wso2.domain
+  domain: wso2.am.domain
   sub_domain: mgt
   local_member_host: "%{::ipaddress}"
   local_member_port: 4000
 # WKA membership scheme
   membership_scheme: wka
-  membership_scheme: wka
   wka:
     members:
       -
         hostname: 192.168.100.5
-        port: 4000
-      -
-        hostname: 192.168.100.6
         port: 4000
 # AWS membership scheme
 #   membership_scheme: aws
@@ -54,7 +53,7 @@ wso2::clustering:
 #     tag_value: tag-value
 
 wso2::dep_sync:
-  enabled: false
+  enabled: true
   auto_checkout: true
   auto_commit: true
   repository_type: svn
@@ -87,7 +86,7 @@ wso2::sso_authentication:
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
   consumer_service_url: https://gw.dev.wso2.org:9443/acs
 
-wso2::enable_thrift_server: false
+wso2::enable_thrift_server: true
 
 wso2::thrift_server_host: localhost
 
@@ -96,9 +95,11 @@ wso2::key_validator_client_type: WSClient
 wso2::file_list:
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
 
-wso2::enable_advance_throttling: true
 wso2::enable_data_publisher: true
 wso2::enable_jms_connection_details: true
 wso2::apim_gateway_disable_jms_event_parameters: true
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
+
+wso2::apim_gateway_disable_jms_event_publisher_parameters: true
+
