Adding template file entry for broker.xml in default.yaml

--- a/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
@@ -22,6 +22,7 @@ wso2::template_list:
   - repository/conf/identity/identity.xml
   - repository/conf/identity/application-authentication.xml
   - repository/conf/identity/EndpointConfig.properties
+  - repository/conf/broker.xml
 #  - repository/conf/security/cipher-text.properties
 #  - repository/conf/security/cipher-tool.properties
 #  - bin/ciphertool.sh
