Overriding mysql connectore jar version

--- a/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -37,6 +37,8 @@ wso2::file_list:
   - "repository/resources/security/%{hiera('wso2::key_store')}"
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
 
+wso2::datasources::mysql::connector_jar: mysql-connector-java-5.1.39-bin.jar
+
 #wso2::cert_list:
 #  -
 #    file: server.crt
