--- a/hieradata/dev/wso2/wso2am/pattern-3/traffic-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/traffic-manager.yaml
@@ -31,3 +31,7 @@ wso2::apim_gateway_disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: true
 wso2::enable_traffic_manager_specific_registry_configurations: true
 
+wso2::remove_file_list:
+  - "repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml"
+  - "repository/deployment/server/synapse-configs/default/sequences/dispatchSeq.xml"
+  - "repository/deployment/server/synapse-configs/default/sequences/outDispatchSeq.xml"
