--- a/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
@@ -58,7 +58,7 @@ wso2::clustering:
 wso2::registry_mounts:
  wso2_config_db:
    path: /_system/config
-   target_path: /_system/config/apim-pub
+   target_path: /_system/config
    read_only: false
    registry_root: /
    enable_cache: true
