--- a/hieradata/dev/wso2/wso2am/pattern-3/api-key-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-key-manager.yaml
@@ -52,7 +52,7 @@ wso2::clustering:
 wso2::registry_mounts:
  wso2_config_db:
    path: /_system/config
-   target_path: /_system/config/apim-km
+   target_path: /_system/config
    read_only: false
    registry_root: /
    enable_cache: true
@@ -72,6 +72,8 @@ wso2::sso_authentication:
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
   consumer_service_url: https://km.dev.wso2.org:9443/acs
 
+wso2::usermgt_datasource: wso2_user_db
+wso2::am_datasource: wso2_am_db
 wso2::enable_thrift_server: false
 
 # Uncomment for a distributed setup without a load balancer (when using ThriftClient)
