gateway manager/worker related configurations

--- a/hieradata/dev/wso2/wso2am/pattern-3/gateway-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/gateway-manager.yaml
@@ -37,10 +37,10 @@ wso2::clustering:
   wka:
     members:
       -
-        hostname: 192.168.100.5
+        hostname: 192.168.57.216
         port: 4000
       -
-        hostname: 192.168.100.6
+        hostname: 192.168.57.247
         port: 4000
 # AWS membership scheme
 #   membership_scheme: aws
@@ -91,7 +91,7 @@ wso2::enable_thrift_server: false
 
 wso2::thrift_server_host: localhost
 
-wso2::key_validator_client_type: WSClient
+wso2::key_validator_client_type: ThriftClient
 
 wso2::file_list:
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
@@ -120,3 +120,8 @@ wso2::am_datasources:
     validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
 wso2::am_datasource: wso2_am_db
+
+wso2::ports:
+  proxyPort:
+    http: 80
+    https: 443
