Using keyvalidator client type as WSClient; becuase this type can be used at both occations when there is a load balancer or not

--- a/hieradata/dev/wso2/wso2am/pattern-3/gateway-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/gateway-manager.yaml
@@ -91,7 +91,7 @@ wso2::enable_thrift_server: false
 
 wso2::thrift_server_host: localhost
 
-wso2::key_validator_client_type: ThriftClient
+wso2::key_validator_client_type: WSClient
 
 wso2::file_list:
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
