--- a/hieradata/dev/wso2/wso2am/pattern-3/traffic-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/traffic-manager.yaml
@@ -33,6 +33,8 @@ wso2::enable_traffic_manager_specific_registry_configurations: true
 
 wso2::remove_file_list:
   - "repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml"
+  - "repository/deployment/server/jaggeryapps"
+  - "repository/deployment/server/webapps"
 
 wso2::master_datasources:
   wso2_mb_store_db:
