--- a/hieradata/dev/wso2/wso2am/pattern-3/api-store.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-store.yaml
@@ -16,6 +16,23 @@
 wso2::mgt_hostname: store.dev.wso2.org
 wso2::hostname: store.dev.wso2.org
 
+wso2::apim_keymanager:
+  host: km.dev.wso2.org
+  port: 9443
+  username: "%{hiera('wso2::super_admin::username')}"
+  password: "%{hiera('wso2::super_admin::password')}"
+
+wso2::apim_gateway:
+  host: gw.dev.wso2.org
+  port: 9443
+  api_endpoint_host: am.dev.wso2.org
+  api_endpoint_port: 8280
+  secure_api_endpoint_port: 8243
+  api_token_revoke_endpoint_port: 8280
+  secure_api_token_revoke_endpoint_port: 8243
+  username: "%{hiera('wso2::super_admin::username')}"
+  password: "%{hiera('wso2::super_admin::password')}"
+
 wso2::clustering:
   enabled: true
   domain: pub.store.am.wso2.domain
