Adding reqired default variable definitions into common.yaml

--- a/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -55,6 +55,10 @@ wso2::apim_publisher:
   host: pub.dev.wso2.org
   port: 9443
 
+wso2::apim_traffic_manager: {}
+wso2::apim_gateway: {}
+wso2::apim_keymanager: {}
+
 wso2::hosts_mapping:
   apim_keymanager:
     ip: 192.168.57.186
