host name changes

--- a/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
@@ -35,9 +35,9 @@ wso2::apim_keymanager:
   password: "%{hiera('wso2::super_admin::password')}"
 
 wso2::apim_gateway:
-  host: gw.dev.wso2.org
+  host: mgt.gw.dev.wso2.org
   port: 9443
-  api_endpoint_host: am.dev.wso2.org
+  api_endpoint_host: gw.dev.wso2.org
   api_endpoint_port: 8280
   secure_api_endpoint_port: 8243
   api_token_revoke_endpoint_port: 8280
