--- a/hieradata/dev/wso2/wso2am/pattern-3/api-key-manager.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-key-manager.yaml
@@ -25,6 +25,17 @@ wso2::apim_traffic_manager:
   username: "%{hiera('wso2::super_admin::username')}"
   password: "%{hiera('wso2::super_admin::password')}"
 
+wso2::apim_gateway:
+  host: mgt.gw.dev.wso2.org
+  port: 9443
+  api_endpoint_host: gw.dev.wso2.org
+  api_endpoint_port: 8280
+  secure_api_endpoint_port: 8243
+  api_token_revoke_endpoint_port: 8280
+  secure_api_token_revoke_endpoint_port: 8243
+  username: "%{hiera('wso2::super_admin::username')}"
+  password: "%{hiera('wso2::super_admin::password')}"
+
 wso2::clustering:
   enabled: true
   domain: km.am.wso2.domain
