--- a/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
@@ -19,32 +19,6 @@ wso2::hostname: pub.dev.wso2.org
 wso2::template_list:
   - repository/conf/jndi.properties
 
-wso2::apim_traffic_manager:
-  host: tm.dev.wso2.org
-  port: 9443
-  receiver_url_port: 9611
-  auth_url_port: 9711
-  jms_url_port: 5672
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
-
-wso2::apim_keymanager:
-  host: km.dev.wso2.org
-  port: 9443
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
-
-wso2::apim_gateway:
-  host: mgt.gw.dev.wso2.org
-  port: 9443
-  api_endpoint_host: gw.dev.wso2.org
-  api_endpoint_port: 8280
-  secure_api_endpoint_port: 8243
-  api_token_revoke_endpoint_port: 8280
-  secure_api_token_revoke_endpoint_port: 8243
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
-
 wso2::clustering:
   enabled: true
   domain: pub.store.am.wso2.domain
@@ -66,7 +40,7 @@ wso2::clustering:
 #   aws:
 #     access_key: access-key
 #     secret_key: secret-key
-#     security_group: security-group 
+#     security_group: security-group
 #     host_header: host-header
 #     region: region
 #     tag_key: tag-key
@@ -122,6 +96,7 @@ wso2::enable_block_condition: false
 wso2::enable_jms_connection_details: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
+wso2::apply_publisher_specific_configurations: true
 
 wso2::remove_file_list:
   - "repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml"
