--- a/hieradata/dev/wso2/wso2am/pattern-3/api-store.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/api-store.yaml
@@ -16,23 +16,6 @@
 wso2::mgt_hostname: store.dev.wso2.org
 wso2::hostname: store.dev.wso2.org
 
-wso2::apim_keymanager:
-  host: km.dev.wso2.org
-  port: 9443
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
-
-wso2::apim_gateway:
-  host: mgt.gw.dev.wso2.org
-  port: 9443
-  api_endpoint_host: gw.dev.wso2.org
-  api_endpoint_port: 8280
-  secure_api_endpoint_port: 8243
-  api_token_revoke_endpoint_port: 8280
-  secure_api_token_revoke_endpoint_port: 8243
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
-
 wso2::clustering:
   enabled: true
   domain: pub.store.am.wso2.domain
@@ -44,10 +27,10 @@ wso2::clustering:
   wka:
     members:
       -
-        hostname: 192.168.100.3
+        hostname: 192.168.57.219
         port: 4000
       -
-        hostname: 192.168.100.4
+        hostname: 192.168.57.21
         port: 4000
 # AWS membership scheme
 #   membership_scheme: aws
@@ -110,6 +93,7 @@ wso2::enable_block_condition: false
 wso2::enable_jms_connection_details: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
+wso2::apply_store_specific_configurations: true
 
 wso2::remove_file_list:
   - "repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml"
