--- a/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -161,11 +161,41 @@ wso2::key_validator_client_type: ThriftClient
 wso2::enable_data_publisher: false
 wso2::enable_block_condition: true
 wso2::enable_jms_connection_details: false
-wso2::apim_gateway_disable_jms_event_parameters: false
+wso2::disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
 wso2::key_store: wso2carbon.jks
 wso2::trust_store: client-truststore.jks
+wso2::apply_key_manager_specific_configurations: false
+wso2::apply_publisher_specific_configurations: false
+wso2::apply_store_specific_configurations: false
+wso2::apply_gateway_specific_configurations: false
+
+wso2::apim_gateway:
+  host: mgt.gw.dev.wso2.org
+  port: 9443
+  api_endpoint_host: gw.dev.wso2.org
+  api_endpoint_port: 8280
+  secure_api_endpoint_port: 8243
+  api_token_revoke_endpoint_port: 8280
+  secure_api_token_revoke_endpoint_port: 8243
+  username: "%{hiera('wso2::super_admin::username')}"
+  password: "%{hiera('wso2::super_admin::password')}"
+
+wso2::apim_traffic_manager:
+  host: tm.dev.wso2.org
+  port: 9443
+  receiver_url_port: 9611
+  auth_url_port: 9711
+  jms_url_port: 5672
+  username: "%{hiera('wso2::super_admin::username')}"
+  password: "%{hiera('wso2::super_admin::password')}"
+
+wso2::apim_keymanager:
+  host: km.dev.wso2.org
+  port: 9443
+  username: "%{hiera('wso2::super_admin::username')}"
+  password: "%{hiera('wso2::super_admin::password')}"
 
 # Secure vault configuration
 #wso2::enable_secure_vault: true
