--- a/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
+++ b/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
@@ -17,20 +17,21 @@ classes:
   - wso2am_analytics
 
 wso2::service_name: wso2am_analytics
-wso2::hostname: iot.analytics.dev.wso2.org
-wso2::mgt_hostname: iot_analytics.dev.wso2.org
+wso2::hostname: apim.analytics.dev.wso2.org
+wso2::mgt_hostname: apim_analytics.dev.wso2.org
 wso2::pack_filename: wso2am-analytics-2.1.0.zip
 
 wso2::file_list:
   - dbscripts/identity/h2.sql
   - dbscripts/identity/mysql.sql
-#  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
+ - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
+wso2::datasources::mysql::connector_jar: mysql-connector-java-5.1.39-bin.jar
 
 wso2::ports:
-  offset: 2
+  offset: 1
 
 wso2::portal:
-  hostname: iot.analytics.dev.wso2.org
+  hostname: apim.analytics.dev.wso2.org
 
 wso2::template_list:
   - repository/conf/identity/identity.xml
@@ -55,233 +56,54 @@ wso2::spark:
 wso2::single_node_deployment:
   enabled: true
 
-wso2::ha_deployment:
-  enabled: false
-  presenter_enabled: false
-  worker_enabled: true
-  eventSync:
-    hostName: "%{::ipaddress}"
-    port: 11224
-  management:
-    hostName: "%{::ipaddress}"
-    port: 10005
-  presentation:
-    hostName: "%{::ipaddress}"
-    port: 11000
-
-
-## Registry mounts
-#wso2::registry_mounts:
-#  wso2_config_db:
-#    path: /_system/config
-#    target_path: /_system/config/das
-#    read_only: false
-#    registry_root: /
-#    enable_cache: true
-#
-#  wso2_gov_db:
-#    path: /_system/governance
-#    target_path: /_system/governance
-#    read_only: false
-#    registry_root: /
-#    enable_cache: true
-
-wso2::clustering:
-  enabled: false
-  domain: das.wso2.domain
-  local_member_host: "%{::ipaddress}"
-  local_member_port: 4000
-  sub_domain: mgt
-# WKA membership scheme
-  membership_scheme: wka
-  wka:
-    members:
-      -
-        hostname: 192.168.100.61
-        port: 4000
-      -
-        hostname: 192.168.100.62
-        port: 4000
-# AWS membership scheme
-#   membership_scheme: aws
-#   aws:
-#     access_key: access-key
-#     secret_key: secret-key
-#     security_group: security-group
-#     host_header: host-header
-#     region: region
-#     tag_key: tag-key
-#     tag_value: tag-value
-
 wso2::is_datasource: wso2_carbon_db
-
-#wso2::master_datasources:
-#  wso2_config_db:
-#    name: WSO2_CONFIG_DB
-#    description: The datasource used for config registry
-#    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
-#    url: jdbc:mysql://192.168.100.1:3306/WSO2_CONFIG_DB?autoReconnect=true
-#    username: "%{hiera('wso2::datasources::mysql::username')}"
-#    password: "%{hiera('wso2::datasources::mysql::password')}"
-#    jndi_config: jdbc/WSO2_CONFIG_DB
-#    max_active: "%{hiera('wso2::datasources::common::max_active')}"
-#    max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
-#    test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
-#    default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-#    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
-#    validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-#
-#  wso2_gov_db:
-#    name: WSO2_GOV_DB
-#    description: The datasource used for gov registry
-#    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
-#    url: jdbc:mysql://192.168.100.1:3306/WSO2_REG_DB?autoReconnect=true
-#    username: "%{hiera('wso2::datasources::mysql::username')}"
-#    password: "%{hiera('wso2::datasources::mysql::password')}"
-#    jndi_config: jdbc/WSO2_GOV_DB
-#    max_active: "%{hiera('wso2::datasources::common::max_active')}"
-#    max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
-#    test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
-#    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
-#    default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-#    validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-#
-#  wso2_user_db:
-#    name: WSO2_USER_DB
-#    description: The datasource is used for user mangement and userstore
-#    driver_class_name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://192.168.100.1:3306/WSO2_USER_DB?autoReconnect=true
-#    username: "%{hiera('wso2::datasources::mysql::username')}"
-#    password: "%{hiera('wso2::datasources::mysql::password')}"
-#    jndi_config: jdbc/WSO2_USER_DB
-#    max_active: "%{hiera('wso2::datasources::common::max_active')}"
-#    max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
-#    test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
-#    default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-#    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
-#    validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
 wso2::analytics_datasources:
   wso2_analytics_event_store_db:
     name: WSO2_ANALYTICS_EVENT_STORE_DB
     description: The datasource used for analytics record store
-    driver_class_name: "%{hiera('wso2::datasources::h2::driver_class_name')}"
-    url: jdbc:h2:repository/database/ANALYTICS_EVENT_STORE;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000
-    username: "%{hiera('wso2::datasources::common::username')}"
-    password: "%{hiera('wso2::datasources::common::password')}"
+    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
+    url: jdbc:mysql://192.168.57.210:3306/analyticseventstoredb?autoReconnect=true
+    username: "%{hiera('wso2::datasources::mysql::username')}"
+    password: "%{hiera('wso2::datasources::mysql::password')}"
     max_active: "%{hiera('wso2::datasources::common::max_active')}"
     max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
     test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
     default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-    validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
+    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
     validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-    default_auto_commit: false
-    initial_size: 0
-    test_while_idle: true
-    min_evictable_idle_time_millis: 4000
-
-#  wso2_analytics_event_store_db:
-#    name: WSO2_ANALYTICS_EVENT_STORE_DB
-#    description: The datasource used for analytics record store
-#    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
-#    url: jdbc:mysql://192.168.100.1:3306/ANALYTICS_EVENT_STORE?autoReconnect=true
-#    username: "%{hiera('wso2::datasources::mysql::username')}"
-#    password: "%{hiera('wso2::datasources::mysql::password')}"
-#    max_active: "%{hiera('wso2::datasources::common::max_active')}"
-#    max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
-#    test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
-#    default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-#    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
-#    validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-#    default_auto_commit: false
-#    initial_size: 0
-#    test_while_idle: true
-#    min_evictable_idle_time_millis: 4000
 
   wso2_analytics_processed_data_store_db:
     name: WSO2_ANALYTICS_PROCESSED_DATA_STORE_DB
     description: The datasource used for analytics record store
-    driver_class_name: "%{hiera('wso2::datasources::h2::driver_class_name')}"
-    url: jdbc:h2:repository/database/ANALYTICS_PROCESSED_DATA_STORE;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000
-    username: "%{hiera('wso2::datasources::common::username')}"
-    password: "%{hiera('wso2::datasources::common::password')}"
+    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
+    url: jdbc:mysql://192.168.57.210:3306/analyticprocesseddatastoredb?autoReconnect=true
+    username: "%{hiera('wso2::datasources::mysql::username')}"
+    password: "%{hiera('wso2::datasources::mysql::password')}"
     max_active: "%{hiera('wso2::datasources::common::max_active')}"
     max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
     test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
     default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-    validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
+    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
     validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-    default_auto_commit: false
-    initial_size: 0
-    test_while_idle: true
-    min_evictable_idle_time_millis: 4000
 
-#  wso2_analytics_processed_data_store_db:
-#    name: WSO2_ANALYTICS_PROCESSED_DATA_STORE_DB
-#    description: The datasource used for analytics record store
-#    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
-#    url: jdbc:mysql://192.168.100.1:3306/ANALYTICS_PROCESSED_DATA_STORE?autoReconnect=true
-#    username: "%{hiera('wso2::datasources::mysql::username')}"
-#    password: "%{hiera('wso2::datasources::mysql::password')}"
-#    max_active: "%{hiera('wso2::datasources::common::max_active')}"
-#    max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
-#    test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
-#    default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-#    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
-#    validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-#    default_auto_commit: false
-#    initial_size: 0
-#    test_while_idle: true
-#    min_evictable_idle_time_millis: 4000
-
-wso2::metrics_datasources:
-  wso2_metrics_db:
-    name: WSO2_METRICS_DB
-    description: The default datasource used for WSO2 Carbon Metrics
-    driver_class_name: "%{hiera('wso2::datasources::h2::driver_class_name')}"
-    url: jdbc:h2:repository/database/WSO2METRICS_DB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-    username: "%{hiera('wso2::datasources::common::username')}"
-    password: "%{hiera('wso2::datasources::common::password')}"
-    jndi_config: jdbc/WSO2MetricsDB
-    datasource: WSO2MetricsDB
+wso2::stats_datasources
+  wso2_am_stats_db:
+    name: WSO2AM_STATS_DB
+    description: The datasource used for setting statistics to API Manager
+    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
+    url: jdbc:mysql://192.168.57.210:3306/amstatsdb?autoReconnect=true
+    username: "%{hiera('wso2::datasources::mysql::username')}"
+    password: "%{hiera('wso2::datasources::mysql::password')}"
     max_active: "%{hiera('wso2::datasources::common::max_active')}"
     max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
     test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
     default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-    validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
+    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
     validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
-#  wso2_metrics_db:
-#    name: WSO2_METRICS_DB
-#    description: The default datasource used for WSO2 Carbon Metrics
-#    driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
-#    url: jdbc:mysql://192.168.100.1:3306/WSO2METRICS_DB?autoReconnect=true
-#    username: "%{hiera('wso2::datasources::mysql::username')}"
-#    password: "%{hiera('wso2::datasources::mysql::password')}"
-#    jndi_config: jdbc/WSO2MetricsDB
-#    datasource: WSO2MetricsDB
-#    max_active: "%{hiera('wso2::datasources::common::max_active')}"
-#    max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
-#    test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
-#    default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
-#    validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
-#    validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
-
-# SSO Configuration
-wso2::sso_authentication:
-  enabled: false
-  login_page: /carbon/admin/login.jsp
-  service_provider_id: wso2iot_analytics
-  sso_service_url: https://is.dev.wso2.org:9443/samlsso
-  consumer_service_url: https://das.dev.wso2.org:9443/acs
-
-# oauth_authentication used at the websocket validation
-wso2::oauth_authentication:
-  token_validation_endpoint: https://localhost:9443/services/OAuth2TokenValidationService
-  username: admin
-  password: admin
-  maximum_http_connection_per_host: 2
-  maximum_total_http_connection: 100
+#If you are using MySQL 5.7 for external  is used, the value of following parameter should be changed to VARCHAR(100)
+wso2::type_mapping_string_type_mysql: VARCHAR(254)
 
 # Secure vault configuration
 #wso2::enable_secure_vault: true
